# TileTorch

./: .gitignore  LICENSE  README.md  pyproject.toml  test.ipynb
examples/: tiling_example.ipynb
src/tiletorch/: __init__.py  codecs.py  filters.py  sinks.py  tiling.py  vis.py
tests/: test_tiling.py
